--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
+    "method-override": "^3.0.0",
     "mongoose": "^9.0.1"
   }
 }
